# summarize_anything

./: .dockerignore  .gitignore  Dockerfile  README.md  build  deploy  discord_lancher.py  discord_launcher.py  executor.py  executor_adhoc.py  method_type.py  pyproject.toml  router.py  summarizer.py
tests/: data.py  test_executor.py  test_integration.py  test_router.py  test_summarizer.py
