[tool.poetry]
name = "summarize-anything"
version = "0.1.0"
description = ""
authors = ["k-kondo-s <feyn.miya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.4"
youtube-transcript-api = "^0.6.2"
beautifulsoup4 = "^4.12.3"
discord = "^2.3.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
