[tool.poetry]
name = "summarize-anything"
version = "0.1.0"
description = ""
authors = ["k-kondo-s <feyn.miya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.3"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.4"
youtube-transcript-api = "^0.6.2"
beautifulsoup4 = "^4.12.3"
discord = "^2.3.2"
python-dotenv = "^1.0.1"
cloudscraper = "^1.2.71"
python-pptx = "^0.6.23"
yt-dlp = "^2024.4.9"
pydub = "^0.25.1"
google-generativeai = "^0.5.4"
langgraph = "^0.0.66"
langchain-community = "^0.2.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
